syncing times two
how about now?

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -5,7 +5,7 @@
       <title>This Chef Styles!</title>
       </head>
 <body>
-    <h1>This Chef Styles!</h1>
+    <h1>This Chef Styles! This must get easier!</h1>
       <p>This is the portfolio of This Chef Styles!</p>
         </body>
         </html>
